--- a/src/components/landing/SearchMovie/HandleSearch.module.scss
+++ b/src/components/landing/SearchMovie/HandleSearch.module.scss
@@ -135,7 +135,7 @@
   }
   .favIcon {
     width: 50%;
-    text-wrap: nowrap;
+    inline-size: max-content;
     background-color: rgb(255, 50, 50);
     padding: 0.5rem;
     border-radius: 0.6rem;
